# loong_driver_sdk

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  NOTICE  README.md  can.cpp  can.h  common.cpp  common.h  config_xml.cpp  config_xml.h  configuration.xml  configuration_line.xml  configuration_lite.xml  driver_test.cpp  driver_test.sh  ecat.cpp  ecat.cxx  ecat.h  ecat.hpp  hobot_can_hal.c  hobot_can_hal.h  libethercat-cpp.so.4.1.4  loong_driver_sdk.cpp  loong_driver_sdk.h  ptr_que.h  rs232.cpp  rs232.h  rs485.cpp  rs485.h  serial.cpp  serial.h  version.h  version.h.in
config/: channels.json  ipcf_channel.json  nodes.json
modbus/: modbus-ipc.patch
modbus/include/: modbus-ipc.h
